--- a/index.html
+++ b/index.html
@@ -25,23 +25,7 @@
     <div class="bg bg3"></div>
     <h1 id="intro" class="white-text"><span id="hello" data-text="Hello my name is">Hello my name is </span><br
         class="line-breaker"><span id="adam" class="blue-text">Adam Walker</span></h1>
-    <h2 id="sub-heading" class="white-text fade-target">Self taught Full stack web developer.</h2>
-    <!--
-    <div id="icons" class="fade-target">
-      <div id="linkedin" class="icon-container fade-target">
-        <a href="https://www.linkedin.com/in/adamwalkeruk/" target="_blank" class="linkIcon fab fa-linkedin-in"></a>
-      </div>
-      <div id="codepen" class="icon-container fade-target">
-        <a href="https://codepen.io/nootuff" target="_blank" class="linkIcon fab fa-codepen"></a>
-      </div>
-      <div id="github" class="icon-container fade-target">
-        <a href="https://github.com/Nootuff" target="_blank" class="linkIcon fab fa-github"></a>
-      </div>
-      <div id="twitter" class="icon-container fade-target">
-        <a href="https://twitter.com/AdamJonWalker" target="_blank" class="linkIcon fab fa-twitter"></a>
-      </div>
-    </div>
-    -->
+    <h2 id="sub-heading" class="white-text fade-target">Full stack web developer.</h2>
     <div id="intro-button" class="slide-up-target"><a class="small-button filling-button" href="#navbar">Let me show
         you!</a></div>
   </section>
@@ -60,7 +44,10 @@
       <div id="about-intro" class="fade-target">
         <div id="about-para">
           <h3><span class="blue-text">Hi,</span> I'm Adam!</h3>
-          <p>I am a self-taught MERN stack web developer currently looking for new career opportunities. I am hard working, adaptable & resourceful with an eye for design and a passion for all things web development. I love spending my time learning, coding, encountering new challenges and developing imaginative solutions. I’m currently working in customer service & IT support and am interested in a change of scenery. </p>
+          <p>I am a self-taught MERN stack web developer currently looking for new career opportunities. I am hard
+            working, adaptable & resourceful with an eye for design and a passion for all things web development. I love
+            spending my time learning, coding, encountering new challenges and developing imaginative solutions. I’m
+            currently working in customer service & IT support and am interested in a change of scenery.</p>
         </div>
         <div id="about-image"><img src="./imgs/about_image.jpg" alt="Adam Walker"></div>
       </div>
@@ -107,9 +94,10 @@
       <div class="project-descriptor">
         <h1 class="project-title ">dogBase</h1>
         <h2 class="project-skills blue-text">Express, NodeJs, MongoDB, Javascript</h2>
-        <p class="project-blurb ">A content-sharing website similar to Reddit built using Node.js,
-          Express and MongoDB. Users are able to create accounts & upload, edit or delete posts while interacting
-          with other users posts. Features full cloud storage using MongoDB Atlas and Cloudinary.</p>
+        <p class="project-blurb ">A content-sharing website inspired by Reddit, built using Node.js,
+          Express and MongoDB. Users are able to create accounts & upload, edit or delete posts while engaging
+          with other users' posts through a like, comment and favourite system. Features full cloud storage using
+          MongoDB Atlas and Cloudinary.</p>
         <div class="button-container">
           <a class="small-button filling-button " href="https://www.dogbase.net/" target="_blank">Visit</a>
           <a class="small-button filling-button " href="https://github.com/Nootuff/Express-Dog-Project"
@@ -124,8 +112,8 @@
       <div class="project-descriptor">
         <h3 class="project-title">weightForm</h3>
         <h2 class="project-skills blue-text">React, NodeJs, Axios, MUI</h2>
-        <p class="project-blurb">weightform uses Axios to allow users to search for exercise information and
-          demonstrations by name, target muscle or equipment used. Users can also save their favourites to localStorage.
+        <p class="project-blurb">weightForm uses Axios to allow users to pull exercise data and demonstrations
+          from an API for use at the gym. Users can also save their favourites to localStorage.
           Also features list pagination and responsive styling with MUI.</p>
         <div class="button-container">
           <a class="small-button filling-button" href="https://weightform.netlify.app/" target="_blank">Visit</a>
@@ -141,7 +129,7 @@
       <div class="project-descriptor">
         <h3 class="project-title ">doThis</h3>
         <h2 class="project-skills blue-text">React, NodeJs, React-Bootstrap, Bootstrap 5</h2>
-        <p class="project-blurb">More than just a simple to-do list. doThis allows users to set themselves tasks, group
+        <p class="project-blurb">More than just a simple to-do list, doThis allows users to set themselves tasks, group
           tasks into project directories, assign task priorities & active deadlines, add notes and restore deleted
           tasks. Data is stored in localHost & can be fully edited or deleted.</p>
         <div class="button-container">
@@ -158,8 +146,9 @@
       <div class="project-descriptor">
         <h3 class="project-title">Inspiring Quote Generator</h3>
         <h2 class="project-skills blue-text">Javascript, jQuery, Axios</h2>
-        <p class="project-blurb ">Makes use of Axios to pull and display random inspirational quotes from an API with a random 
-          background. Also features Twitter integration allowing the user to tweet the quote directly from the site.</p>
+        <p class="project-blurb ">Makes use of Axios to retrieve and display random inspirational quotes from an API with a
+          random background. Also features Twitter integration allowing the user to tweet the quote directly from the
+          site.</p>
         <div class="button-container">
           <a class="small-button filling-button" href="https://nootuff.github.io/inspiring-quote-generator/"
             target="_blank">Visit</a>
@@ -168,7 +157,8 @@
         </div>
       </div>
       <a class="project-image" href="https://nootuff.github.io/inspiring-quote-generator/" target="_blank"><img
-          src="./imgs/quote-generator-imgs/quote-generator-image-2.png" width="100%" alt="Inspiring Quote Generator quote"></a>
+          src="./imgs/quote-generator-imgs/quote-generator-image-2.png" width="100%"
+          alt="Inspiring Quote Generator quote"></a>
     </div>
 
 
@@ -200,7 +190,7 @@
         </label>
         <br>
         <div id="submit-container">
-          <input type="submit" value="Send" class="large-button filling-button" onclick="return emptyChecker()">
+          <input type="submit" value="Send" class="large-button filling-button" onclick="emptyChecker()">
         </div>
         <h5 id="my-email">Or email me on: <span class="blue-text"><br
               class="line-breaker">adamwalkerlondon@gmail.com</span></h5>
