--- a/index.html
+++ b/index.html
@@ -67,21 +67,20 @@
           <p class="proficiency-container"><span class="proficiency-icon"><i class="icon-jquery"></i></span> <span
               class="proficiency-text">jQuery</span></p>
 
-
         </div>
         <div class="right column">
           <p class="proficiency-container"><span class="proficiency-icon"><i class="fab fa-github"></i></span> <span
-              class="proficiency-text  ">Git & GitHub</span></p>
+              class="proficiency-text">Git & GitHub</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><i class="icon-mongodb"></i></span> <span
-              class="proficiency-text  ">MongoDb</span></p>
+              class="proficiency-text">MongoDb</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><i class="icon-npm"></i></span> <span
-              class="proficiency-text  ">Express & EJS</span></p>
+              class="proficiency-text">Express & EJS</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><span class="iconify"
                 data-icon="simple-icons:mui"></span></span> <span class="proficiency-text">MUI</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><i class="fab fa-bootstrap"></i></span> <span
               class="proficiency-text">Bootstrap 5</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><i class="fab fa-sass"></i></span> <span
-              class="proficiency-text  ">Sass</span></p>
+              class="proficiency-text">Sass</span></p>
 
         </div>
       </div>
@@ -92,19 +91,19 @@
 
     <div class="slide-up-target project-base white-text">
       <div class="project-descriptor">
-        <h1 class="project-title ">dogBase</h1>
+        <h1 class="project-title">dogBase</h1>
         <h2 class="project-skills blue-text">Express, NodeJs, MongoDB, Javascript</h2>
         <p class="project-blurb ">A content-sharing website inspired by Reddit, built using Node.js,
           Express and MongoDB. Users are able to create accounts & upload, edit or delete posts while engaging
           with other users' posts through a like, comment and favourite system. Features full cloud storage using
           MongoDB Atlas and Cloudinary.</p>
         <div class="button-container">
-          <a class="small-button filling-button " href="https://www.dogbase.net/" target="_blank">Visit</a>
-          <a class="small-button filling-button " href="https://github.com/Nootuff/Express-Dog-Project"
+          <a class="small-button filling-button" href="https://www.dogbase.net/" target="_blank">Visit</a>
+          <a class="small-button filling-button" href="https://github.com/Nootuff/Express-Dog-Project"
             target="_blank">Github</a>
         </div>
       </div>
-      <a class="project-image " href="https://www.dogbase.net/" target="_blank"><img
+      <a class="project-image" href="https://www.dogbase.net/" target="_blank"><img
           src="./imgs/dogbase-imgs/dogbase-image-1.png" width="100%" alt="dogBase edit profile page"></a>
     </div>
 
@@ -113,8 +112,8 @@
         <h3 class="project-title">weightForm</h3>
         <h2 class="project-skills blue-text">React, NodeJs, Axios, MUI</h2>
         <p class="project-blurb">weightForm uses Axios to allow users to pull exercise data and demonstrations
-          from an API for use at the gym. Users can also save their favourites to localStorage.
-          Also features list pagination and responsive styling with MUI.</p>
+          from an API for use at the gym. Users can also save their favourite exercises to localStorage.
+          Also features data list pagination and responsive styling with MUI.</p>
         <div class="button-container">
           <a class="small-button filling-button" href="https://weightform.netlify.app/" target="_blank">Visit</a>
           <a class="small-button filling-button" href="https://github.com/Nootuff/React-Workout-App"
@@ -127,11 +126,11 @@
 
     <div class="slide-up-target project-base white-text">
       <div class="project-descriptor">
-        <h3 class="project-title ">doThis</h3>
+        <h3 class="project-title">doThis</h3>
         <h2 class="project-skills blue-text">React, NodeJs, React-Bootstrap, Bootstrap 5</h2>
         <p class="project-blurb">More than just a simple to-do list, doThis allows users to set themselves tasks, group
           tasks into project directories, assign task priorities & active deadlines, add notes and restore deleted
-          tasks. Data is stored in localHost & can be fully edited or deleted.</p>
+          tasks. Data is stored in localHost & can be completely edited or deleted.</p>
         <div class="button-container">
           <a class="small-button filling-button" href="https://dothistasktracker.netlify.app/" target="_blank">Visit</a>
           <a class="small-button filling-button" href="https://github.com/Nootuff/React-ToDo-App"
@@ -146,9 +145,9 @@
       <div class="project-descriptor">
         <h3 class="project-title">Inspiring Quote Generator</h3>
         <h2 class="project-skills blue-text">Javascript, jQuery, Axios</h2>
-        <p class="project-blurb ">Makes use of Axios to retrieve and display random inspirational quotes from an API with a
-          random background. Also features Twitter integration allowing the user to tweet the quote directly from the
-          site.</p>
+        <p class="project-blurb ">Makes use of Axios to retrieve and display random inspirational quotes from an API
+          on a random background. Also features Twitter integration, allowing the user to tweet the quote directly from
+          the site.</p>
         <div class="button-container">
           <a class="small-button filling-button" href="https://nootuff.github.io/inspiring-quote-generator/"
             target="_blank">Visit</a>
@@ -160,7 +159,6 @@
           src="./imgs/quote-generator-imgs/quote-generator-image-2.png" width="100%"
           alt="Inspiring Quote Generator quote"></a>
     </div>
-
 
     <a href="https://github.com/Nootuff" target="_blank" id="profile-link">
       <p class="large-button fade-target filling-button">See More</p>
@@ -195,7 +193,6 @@
         <h5 id="my-email">Or email me on: <span class="blue-text"><br
               class="line-breaker">adamwalkerlondon@gmail.com</span></h5>
       </form>
-
     </div>
   </section>
   <footer class="white-text">
@@ -210,7 +207,7 @@
       <a href="https://twitter.com/AdamJonWalker"><i class="fab fa-twitter fade-to-blue" target="_blank"></i> </a>
     </p>
   </footer>
-  <script type="text/javascript" src="funcs.js"></script>
+  <script type="text/javascript" src="myscripts.js"></script>
 </body>
 
 </html>
