--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="image" property="og:image" content="./imgs/portfolio-og-image.png" />
   <link rel="stylesheet" href="style.css">
 </head>
 
