Added meta description to html file.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="image" property="og:image" content="./imgs/portfolio-og-image.png" />
+    <meta name="description" content="The personal portfolio of Adam Walker, a Web Developer based in London experienced in HTML, CSS, Javascript, React, Node JS, jQuery, Git & GitHub, MongoDb, Express & EJS, MUI, Bootstrap 5 and Sass." />
   <link rel="stylesheet" href="style.css">
 </head>
 
