Fixed slight spelling errors in html text.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="image" property="og:image" content="./imgs/portfolio-og-image.png" />
-    <meta name="description" content="The personal portfolio of Adam Walker, a Web Developer based in London experienced in HTML, CSS, Javascript, React, Node JS, jQuery, Git & GitHub, MongoDb, Express & EJS, MUI, Bootstrap 5 and Sass." />
+    <meta name="description" content="The personal portfolio of Adam Walker, a Web Developer based in London experienced in HTML, CSS, JavaScript, React, Node JS, jQuery, Git & GitHub, MongoDb, Express & EJS, MUI, Bootstrap 5 and Sass." />
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -61,7 +61,7 @@
           <p class="proficiency-container"><span class="proficiency-icon"><i class="fab fa-css3"></i></span> <span
               class=" proficiency-text">CSS</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><i class="fab fa-js"></i></span> <span
-              class="proficiency-text">Javascript</span></p>
+              class="proficiency-text">JavaScript</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><i class="fab fa-react"></i></span> <span
               class="proficiency-text">React</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><i class="fab fa-node-js"></i></span> <span
@@ -94,7 +94,7 @@
     <div class="slide-up-target project-base white-text">
       <div class="project-descriptor">
         <h1 class="project-title">dogBase</h1>
-        <h2 class="project-skills blue-text">Express, NodeJs, MongoDB, Javascript</h2>
+        <h2 class="project-skills blue-text">Express, NodeJs, MongoDB, JavaScript</h2>
         <p class="project-blurb ">A content-sharing website inspired by Reddit, built using Node.js,
           Express and MongoDB. Users are able to create accounts & upload, edit or delete posts while engaging
           with other users' posts through a like, comment and favourite system. Features full cloud storage using
@@ -146,7 +146,7 @@
     <div class="slide-up-target project-base white-text">
       <div class="project-descriptor">
         <h3 class="project-title">Inspiring Quote Generator</h3>
-        <h2 class="project-skills blue-text">Javascript, jQuery, Axios</h2>
+        <h2 class="project-skills blue-text">JavaScript, jQuery, Axios</h2>
         <p class="project-blurb ">Makes use of Axios to retrieve and display random inspirational quotes from an API
           on a random background. Also features Twitter integration, allowing the user to tweet the quote directly from
           the site.</p>
