--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="bg bg3"></div>
     <h1 id="intro" class="white-text"><span id="hello" data-text="Hello my name is">Hello my name is </span><br
         class="line-breaker"><span id="adam" class="blue-text">Adam Walker</span></h1>
-    <h2 id="sub-heading" class="white-text fade-target">Full stack web developer.</h2>
+    <h2 id="sub-heading" class="white-text fade-target">Full stack web developer</h2>
     <div id="intro-button" class="slide-up-target"><a class="small-button filling-button" href="#navbar">Let me show
         you!</a></div>
   </section>
