Project and layout updates

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Adam Walker | Full Stack Web Developer</title>
+  <title>Adam Walker | Front-End Web Developer</title>
   <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico">
   <link rel="apple-touch-icon" href="./imgs/logo192.png">
   <link rel="manifest" href="manifest.json">
@@ -27,7 +27,7 @@
     <div class="bg bg3"></div>
     <h1 id="intro" class="white-text"><span id="hello" data-text="Hello my name is">Hello my name is </span><br
         class="line-breaker"><span id="adam" class="blue-text">Adam Walker</span></h1>
-    <h2 id="sub-heading" class="white-text fade-target">Full stack web developer</h2>
+    <h2 id="sub-heading" class="white-text fade-target">Front-End web developer.</h2>
     <div id="intro-button" class="slide-up-target"><a class="small-button filling-button" href="#navbar">Let me show
         you!</a></div>
   </section>
@@ -46,26 +46,26 @@
       <div id="about-intro" class="fade-target">
         <div id="about-para">
           <h3><span class="blue-text">Hi,</span> I'm Adam!</h3>
-          <p>I am a self-taught MERN stack web developer currently looking for new career opportunities. I am hard
+          <p>I am a self-taught MERN stack Web Developer currently looking for new career opportunities. I am hard
             working, adaptable & resourceful with an eye for design and a passion for all things web development. I love
             spending my time learning, coding, encountering new challenges and developing imaginative solutions. I’m
             currently working in customer service & IT support and am interested in a change of scenery.</p>
         </div>
-        <div id="about-image"><img src="./imgs/about_image.jpg" alt="Adam Walker"></div>
+        <!--<div id="about-image"><img src="./imgs/about_image.jpg" alt="Adam Walker"></div>-->
       </div>
       <p id="proficiency-subheading" class="fade-target">Skills</p>
       <div id="proficiency-table" class="fade-target">
         <div class="left column">
           <p class="proficiency-container"><span class="proficiency-icon"><i class="fab fa-html5"></i></span> <span
-              class=" proficiency-text">HTML</span></p>
+              class=" proficiency-text">HTML5</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><i class="fab fa-css3"></i></span> <span
-              class=" proficiency-text">CSS</span></p>
+              class=" proficiency-text">CSS / Sass</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><i class="fab fa-js"></i></span> <span
               class="proficiency-text">JavaScript</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><i class="fab fa-react"></i></span> <span
               class="proficiency-text">React</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><i class="fab fa-node-js"></i></span> <span
-              class="proficiency-text">Node JS</span></p>
+              class="proficiency-text">Node.js</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><i class="icon-jquery"></i></span> <span
               class="proficiency-text">jQuery</span></p>
 
@@ -74,7 +74,7 @@
           <p class="proficiency-container"><span class="proficiency-icon"><i class="fab fa-github"></i></span> <span
               class="proficiency-text">Git & GitHub</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><i class="icon-mongodb"></i></span> <span
-              class="proficiency-text">MongoDb</span></p>
+              class="proficiency-text">MongoDb & Mongoose</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><i class="icon-npm"></i></span> <span
               class="proficiency-text">Express & EJS</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><span class="iconify"
@@ -82,7 +82,7 @@
           <p class="proficiency-container"><span class="proficiency-icon"><i class="fab fa-bootstrap"></i></span> <span
               class="proficiency-text">Bootstrap 5</span></p>
           <p class="proficiency-container"><span class="proficiency-icon"><i class="fab fa-sass"></i></span> <span
-              class="proficiency-text">Sass</span></p>
+              class="proficiency-text">Handlebars.js</span></p>
 
         </div>
       </div>
@@ -90,6 +90,35 @@
   </section>
   <section id="projects">
     <h2 class="heading white-text slide-left slide-side-target">Projects</h2>
+
+    <div class="slide-up-target project-base white-text">
+      <div class="project-descriptor">
+        <h1 class="project-title">Urbaboxx</h1>
+        <h2 class="project-skills blue-text">BigCommerce, Stencil, Handlebars, Searchspring, NodeJs, JavaScript, jQuery, JSON, RESTful API</h2>
+        <p class="project-blurb ">Online store built while working at Calashock Commerce for a shelving and furniture wholesaler with a sleek and minimalist design. I worked closely with the design and UX team to incorporate client feedback during the development process. The theme is also adapted to implement the Searchspring plugin to handle product searches and filtering.</p>
+        <div class="button-container">
+          <a class="small-button filling-button" href="https://urbaboxx.co.uk/" target="_blank">Visit</a>
+       
+        </div>
+      </div>
+      <a class="project-image" href="https://urbaboxx.co.uk/" target="_blank"><img
+        src="./imgs/urbaboxx-imgs/urbaboxx-image-1.png" width="100%" alt="Urbaboxx homepage"></a>
+    </div>
+
+    <div class="slide-up-target project-base white-text">
+      <div class="project-descriptor">
+        <h1 class="project-title">Purrform</h1>
+        <h2 class="project-skills blue-text">BigCommerce, Stencil, Handlebars, NodeJs, JavaScript, jQuery, JSON, RESTful API</h2>
+        <p class="project-blurb ">
+          I helped one of the UK's leading raw cat food brands relaunch their online store on BigCommerce with a new user-friendly design, custom page-builder widgets and a delivery date selector on the checkout. This was my first project as a Lead Developer while working at Calashock Commerce. 
+        </p>
+        <div class="button-container">
+          <a class="small-button filling-button" href="https://www.purrform.co.uk/" target="_blank">Visit</a>
+        </div>
+      </div>
+      <a class="project-image" href="https://www.dogbase.net/" target="_blank"><img
+          src="./imgs/purrform-imgs/purrform-img-1.png" width="100%" alt="dogBase edit profile page"></a>
+    </div>
 
     <div class="slide-up-target project-base white-text">
       <div class="project-descriptor">
@@ -124,42 +153,6 @@
       </div>
       <a class="project-image" href="https://weightform.netlify.app/" target="_blank"><img
           src="./imgs/weightForm-imgs/weightForm-img-1.png" width="100%" alt="weightForm results page"></a>
-    </div>
-
-    <div class="slide-up-target project-base white-text">
-      <div class="project-descriptor">
-        <h3 class="project-title">doThis</h3>
-        <h2 class="project-skills blue-text">React, NodeJs, React-Bootstrap, Bootstrap 5</h2>
-        <p class="project-blurb">More than just a simple to-do list, doThis allows users to set themselves tasks, group
-          tasks into project directories, assign task priorities & active deadlines, add notes and restore deleted
-          tasks. Data is stored in localHost & can be completely edited or deleted.</p>
-        <div class="button-container">
-          <a class="small-button filling-button" href="https://dothistasktracker.netlify.app/" target="_blank">Visit</a>
-          <a class="small-button filling-button" href="https://github.com/Nootuff/React-ToDo-App"
-            target="_blank">Github</a>
-        </div>
-      </div>
-      <a class="project-image" href="https://dothistasktracker.netlify.app/" target="_blank"><img
-          src="./imgs/doThis-imgs/doThis-img-1.png" width="100%" alt="doThis home project view"></a>
-    </div>
-
-    <div class="slide-up-target project-base white-text">
-      <div class="project-descriptor">
-        <h3 class="project-title">Inspiring Quote Generator</h3>
-        <h2 class="project-skills blue-text">JavaScript, jQuery, Axios</h2>
-        <p class="project-blurb ">Makes use of Axios to retrieve and display random inspirational quotes from an API
-          on a random background. Also features Twitter integration, allowing the user to tweet the quote directly from
-          the site.</p>
-        <div class="button-container">
-          <a class="small-button filling-button" href="https://nootuff.github.io/inspiring-quote-generator/"
-            target="_blank">Visit</a>
-          <a class="small-button filling-button" href="https://github.com/Nootuff/inspiring-quote-generator"
-            target="_blank">Github</a>
-        </div>
-      </div>
-      <a class="project-image" href="https://nootuff.github.io/inspiring-quote-generator/" target="_blank"><img
-          src="./imgs/quote-generator-imgs/quote-generator-image-2.png" width="100%"
-          alt="Inspiring Quote Generator quote"></a>
     </div>
 
     <a href="https://github.com/Nootuff" target="_blank" id="profile-link">
@@ -198,14 +191,14 @@
     </div>
   </section>
   <footer class="white-text">
-    <p id="copyright" class="fade-target"> &copy; Adam Walker 2022</p>
+    <p id="copyright" class="fade-target"> &copy; Adam Walker <span id="date"></span></p>
     <p id="footer-icons" class="fade-target">
+      <a href="https://github.com/Nootuff" id="footer-icon-2"><i class="fab fa-github fade-to-blue" target="_blank"></i>
+      </a>
       <a href="https://www.linkedin.com/in/adamwalkeruk/" target="_blank"><i
           class="fab fa-linkedin-in fade-to-blue"></i> </a>
       <a href="https://codepen.io/nootuff" id="footer-icon-1"><i class="fab fa-codepen fade-to-blue"
           target="_blank"></i> </a>
-      <a href="https://github.com/Nootuff" id="footer-icon-2"><i class="fab fa-github fade-to-blue" target="_blank"></i>
-      </a>
       <a href="https://twitter.com/AdamJonWalker"><i class="fab fa-twitter fade-to-blue" target="_blank"></i> </a>
     </p>
   </footer>
